# graphql-python-server

./: .editorconfig  .env.example  .gitignore  Pipfile  README.md  main.py  pyproject.toml
database/: connection.py  map_collections.py
env/: environment.py
gql/: __init__.py
gql/resolvers/mutations/: __init__.py  rol.py  scope.py  user.py
gql/resolvers/queries/: __init__.py  rol.py  scope.py  user.py
gql/resolvers/scalars/: __init__.py  resolvers.py
gql/schemas/enums/: __init__.py  scope_action.graphql
gql/schemas/inputs/: __init__.py  rol.graphql  scope.graphql  user.graphql
gql/schemas/mutations/: __init__.py  rol.graphql  scope.graphql  user.graphql
gql/schemas/queries/: __init__.py  rol.graphql  scope.graphql  user.graphql
gql/schemas/scalars/: __init__.py
gql/schemas/types/: __init__.py  rol.graphql  scope.graphql  user.graphql
models/: base.py  rol.py  rol_relation.py  scope.py  user.py
schemas/: rol.py  scope.py  user.py
schemas/helpers/: normalize.py  regex.py
