[tool.poetry]
name = "graphql-python-server"
version = "0.1.0"
description = ""
authors = ["Alfredo Poveda <alfpovsistemas@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
python-arango = "^5.4.0"
ariadne = "^0.12.0"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
python-dotenv = "^0.14.0"
pydantic = {extras = ["email"], version = "^1.6.1"}
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
